Add support jakarta ee through maven dependency

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,15 @@
 	<properties>
 		<failOnMissingWebXml>false</failOnMissingWebXml>
 	</properties>
+	<dependencies>
+		<dependency>
+		    <groupId>jakarta.platform</groupId>
+		    <artifactId>jakarta.jakartaee-api</artifactId>
+		    <version>8.0.0</version>
+		    <scope>provided</scope>
+		</dependency>
+			
+	</dependencies>
 
 	<build>
 		<plugins>
