--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
 	<properties>
 		<failOnMissingWebXml>false</failOnMissingWebXml>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -29,6 +30,7 @@
 				<configuration>
 					<source>14</source>
 					<target>14</target>
+					<encoding>UTF-8</encoding>
 				</configuration>
 				<version>3.8.1</version>
 			</plugin>
